Fix footer bottom gap

--- a/frontend/style.scss
+++ b/frontend/style.scss
@@ -324,7 +324,7 @@ form p.message a:hover {
 
 // Content
 .content {
-  min-height: calc(100vh - 230px);
+  min-height: calc(100vh - 200px);
 }
 
 // Footer
